--- a/templates/list_hotels.html
+++ b/templates/list_hotels.html
@@ -1,10 +1,13 @@
 {% extends 'header.html' %}
 
+
 {% block head %}
 <meta name="Description" content="List all of the recommended hotels in Yamagata City, Japan.">
 {% endblock %}
 
+
 {% block body %}
+
 {% with messages = get_flashed_messages()%}
     {% if messages %}
     <ul class="flashes">
@@ -15,7 +18,15 @@
     {% endif %}
 {% endwith %}
 
-<div class="main-div">
+<section class="hero-banner-wrap">
+    <div class="hero-banner">
+      <div class="hero-text"></div>
+      <div class="hero-banner-box">
+      </div>
+    </div>
+</section>
+
+<section class="main-div">
     <ul>
         {% for hotel in hotels_by_category %}
         <li>
@@ -25,9 +36,10 @@
         </li>
         {% endfor %}
     </ul>
-</div>
+</section>
 
-<div class="sidebar">
+<section class="sidebar">
+
     <h2 class="subtitle">Hotels</h2>
     <ul>
     {% for hotel in hotels %}
@@ -40,7 +52,9 @@
         <a href="{{ url_for('deleteHotel', hotel_id=hotel.id) }}" title="Delete {{ hotel.name }}" class="btn hotels-btn">Delete</a>
     {% endfor %}
     </ul>
-</div>
+
+</section>
+
 <a class="sub-link" href="{{ url_for('listHotels', hotels=hotels) }}">Back to Hotels</a>
 
 {% endblock %}
