--- a/templates/public_list_hotels_by_category.html
+++ b/templates/public_list_hotels_by_category.html
@@ -1,17 +1,23 @@
 {% extends 'header.html' %}
+
 {% block head %}
 <meta name="Description" content="List all of the hotels in certain category or of a certain type.">
 {% endblock %}
+
+
 {% block body %}
+<section>
 
-<h1 class="page-title heading">{{ category }}</h1>
+    <h1 class="page-title heading">{{ category }}</h1>
 
-{% for hotel in hotels %}
-    <h2><a class="hotel-name" href="{{ url_for('showHotel', hotel_id=hotel.id) }}">{{ hotel.name }}</a></h2>
-{% endfor %}
+    {% for hotel in hotels %}
+        <h2><a class="hotel-name" href="{{ url_for('showHotel', hotel_id=hotel.id) }}">{{ hotel.name }}</a></h2>
+    {% endfor %}
 
-<p><a href="{{ url_for('showLogin') }}"><span class="glyphicon glyphicon-user"></span>Log In</a> to edit.</p>
+    <p><a href="{{ url_for('showLogin') }}"><span class="glyphicon glyphicon-user"></span>Log In</a> to edit.</p>
 
-<a class="sub-link" href="{{ url_for('listHotels', hotels=hotels) }}">Back to Hotels</a>
+    <a class="sub-link" href="{{ url_for('listHotels', hotels=hotels) }}">Back to Hotels</a>
+
+</section>
 
 {% endblock %}
