--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -95,6 +95,10 @@ input {
   justify-content: space-between;
 }
 
+.section {
+  margin-top: 100px;
+}
+
 .wrap {
   overflow-x: hidden;
 }
@@ -233,10 +237,12 @@ input {
 
 .hero-banner-box {
   background-image: linear-gradient(rgba($color-8, .6), rgba($color-8, .6));
-  border-radius: 5px;
-  height: 350px;
+  border-radius: 7px;
+  height: 600px;
   margin: 0 auto;
-  width: 80%;
+  position: relative;
+  top: -30px;
+  width: 1200px;
 }
 
 .hero-banner-wrap {
@@ -270,10 +276,10 @@ input {
 
 @media screen and (min-width: 600px) {
   .hero-banner {
-    background-image: linear-gradient(rgba($color-8, .6), rgba($color-8, .6)), url('/static/img/ginzan.jpeg');
+    background-image: linear-gradient(rgba($color-8, .6), rgba($color-8, .6)), url('/static/img/YukiBdayCard.svg');
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 35%;
     display: flex;
     flex-direction: column;
     height: 100vh;
