--- a/templates/new_hotel.html
+++ b/templates/new_hotel.html
@@ -4,11 +4,13 @@
 <meta name="Description" content="Add a new entry to the list of hotels and lodgings.">
 {% endblock %}
 
+
 {% block body %}
-<section>
+
+<section class="section">
 
     <h1 class="page-title heading">Add New Hotel</h1>
-    
+
     <form class="form" action="{{ url_for('newHotel') }}" method="POST">
         <div class="form-group">
             <label class=".sr-only" for="nameOfHotel">Name of hotel</label>
