Fix listHotelsByCategory creator id bug

--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -90,6 +90,10 @@ input {
   justify-content: center;
 }
 
+.lay-content {
+  margin-top: 80px;
+}
+
 .lay-flex-container {
   display: flex;
   justify-content: space-between;
