--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
         {% block header %}
         {% endblock %}
 
-        <content class="lay-content">
+        <content>
                 {% block body %}
                 {% endblock %}
         </content>
