--- a/templates/list_hotel_categories.html
+++ b/templates/list_hotel_categories.html
@@ -1,11 +1,12 @@
 {% extends 'header.html' %}
+
 {% block head %}
 <meta name="Description" content="List the different types or categories of hotels or lodgings.">
 {% endblock %}
 
-{% block body %}
 
-<section>
+{% block body %}
+<section class="lay-content">
 <h1 class="page-title heading">What kind of lodging are you looking for?</h1>
 
 {% for category in categories %}
