--- a/templates/list_hotels.html
+++ b/templates/list_hotels.html
@@ -18,7 +18,7 @@
     {% endif %}
 {% endwith %}
 
-<section class="hero-banner-wrap">
+<section class="lay-content hero-banner-wrap">
     <div class="hero-banner">
       <div class="hero-text"></div>
       <div class="hero-banner-box">
