--- a/templates/login.html
+++ b/templates/login.html
@@ -23,7 +23,7 @@
 {% block body %}
 
 <!-- GOOGLE SIGN IN BUTTON -->
-<section>
+<section class="lay-content">
     {% if 'username' not in session %}
     <div class="lay-box">
         <div class="login-box">
