--- a/templates/new_hotel.html
+++ b/templates/new_hotel.html
@@ -7,7 +7,7 @@
 
 {% block body %}
 
-<section class="section">
+<section class="lay-content">
 
     <h1 class="page-title heading">Add New Hotel</h1>
 
