--- a/templates/new_user.html
+++ b/templates/new_user.html
@@ -7,8 +7,7 @@
 
 {% block body %}
 
-<section>
-
+<section class="lay-content">
     <h1 class="page-title heading">Create Account</h1>
 
     <form class="form" action="{{ url_for('newUser') }}" method="POST">
