--- a/templates/show_hotel.html
+++ b/templates/show_hotel.html
@@ -17,8 +17,7 @@
     {% endif %}
 {% endwith %}
 
-<section>
-
+<section class="lay-content">
     <h1 class="page-title heading">{{ hotel.name }}</h1>
     <h3>({{ hotel.category }})</h3>
         {% if hotel.picture %}
