--- a/static/css/style.css
+++ b/static/css/style.css
@@ -54,6 +54,9 @@ input {
   height: 100%;
   justify-content: center; }
 
+.lay-content {
+  margin-top: 80px; }
+
 .lay-flex-container {
   display: flex;
   justify-content: space-between; }
