--- a/templates/delete_hotel.html
+++ b/templates/delete_hotel.html
@@ -1,14 +1,18 @@
 {% extends 'header.html' %}
+
 {% block head %}
 <meta name="Description" content="List all of the hotels in certain category or of a certain type.">
 {% endblock %}
-{% block body %}
 
+
+{% block body %}
+<section class="lay-content">
 <h1 class="page-title heading">Delete {{ hotel.name }}</h1>
 
     <form action="{{ url_for('deleteHotel', hotel_id=hotel.id) }}" method="POST">
         <input class="btn btn-danger" type="submit" value="Delete Hotel"></input>
     </form>
+</section>
 
 <a class="sub-link" href="{{ url_for('listHotels', hotels=hotels) }}">Cancel</a>
 
