--- a/templates/header.html
+++ b/templates/header.html
@@ -13,7 +13,7 @@
         <div class="hdr-nav">
             <nav class="hdr-navbar" id="hdrNavbar">
                 <a class="is-active" href="#">Home</a>
-                <a href="#">Page 1</a>
+                <a href="{{ url_for('newHotel') }}">Add A Hotel</a>
                 <a href="#">Page 2</a>
                 <a href="#">Page 3</a>
                 {% if 'username' not in session %}
