--- a/templates/public_list_hotels.html
+++ b/templates/public_list_hotels.html
@@ -16,7 +16,7 @@
     {% endif %}
 {% endwith %}
 
-<section class="main-div">
+<section class="lay-content">
 
     <ul>
         {% for hotel in hotels_by_category %}
@@ -31,7 +31,7 @@
 </section>
 
 <section class="sidebar">
-    
+
     <ul>
     {% for hotel in hotels %}
         <li>
