--- a/templates/header.html
+++ b/templates/header.html
@@ -4,7 +4,7 @@
 
 <header class="hdr">
     <div role="banner" class="lay-flex-container">
-        <a class="hdr-brand fl" href="#">山形Hotels</a>
+        <a class="hdr-brand fl" href="#">山形 Lodgings</a>
         {% if 'username' not in session %}
         <a class="hdr-user-link" href="{{ url_for('showLogin') }}"><i class="far fa-user"><span class="hdr-text"> Log In</span></i></a>
         {% else %}
