--- a/templates/show_hotel.html
+++ b/templates/show_hotel.html
@@ -29,7 +29,16 @@
             </svg>
         {% endif %}
     <p class="description">{{ hotel.description }}</p>
-
+    <p>
+        <a href="{{ url_for('editHotel', hotel_id=hotel.id) }}" title="Edit {{ hotel.name }}" class="btn hotels-btn">Edit</a>
+        <a href="{{ url_for('deleteHotel', hotel_id=hotel.id) }}" title="Delete {{ hotel.name }}" class="btn hotels-btn">Delete</a>
+    </p>
+    <p>
+        <a class="sub-link" href="{{ url_for('showHotelsByCategory', hotels=hotels, category=hotel.category) }}">Back to {{ hotel.category }}s</a>
+    </p>
+    <p>
+        <a class="sub-link" href="{{ url_for('showHotels', hotels=hotels) }}">Back to Lodgings</a>
+    </p>
 </section>
 
 {% endblock %}
