--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -8,7 +8,7 @@ $font-size-two: 1rem;
 $color-1: #2e005e;
 $color-2: #f9c500;
 $color-3: #090b01;
-$color-4: #090b01;
+$color-4: #e3e0e5;
 $color-5: #108295;
 $color-6: #595454;
 $color-7: #f9c500;
@@ -251,6 +251,11 @@ input {
 
 .hero-banner-wrap {
   margin-top: 80px;
+}
+
+.hotel-img {
+  height: 200px;
+  width: 350px;
 }
 
 .login-box {
