--- a/templates/list_hotels_by_category.html
+++ b/templates/list_hotels_by_category.html
@@ -7,16 +7,20 @@
 
 {% block body %}
 <section class="lay-content">
-    <h1 class="page-title heading">{{ category }}</h1>
+    <h1 class="page-title heading">{{ category }}s</h1>
 
     {% for hotel in hotels %}
-        <h2><a class="hotel-name" href="{{ url_for('listHotelsByCategory', creator=creator, category=category, hotel=hotel.id) }}">{{ hotel.name }}</a></h2>
+        <h1><a class="hotel-name" href="{{ url_for('showHotel', hotel_id=hotel.id) }}">{{ hotel.name }}</a></h1>
         <div class="profile-pic" style="background-image:url({{ creator.picture }})"></div>
-        <a href="{{ url_for('editHotel', hotel_id=hotel.id) }}" title="Edit {{ hotel.name }}" class="btn hotels-btn">Edit</a>
-        <a href="{{ url_for('deleteHotel', hotel_id=hotel.id) }}" title="Delete {{ hotel.name }}" class="btn hotels-btn">Delete</a>
+        <p>
+            <a href="{{ url_for('editHotel', hotel_id=hotel.id) }}" title="Edit {{ hotel.name }}" class="btn hotels-btn">Edit</a>
+            <a href="{{ url_for('deleteHotel', hotel_id=hotel.id) }}" title="Delete {{ hotel.name }}" class="btn hotels-btn">Delete</a>
+        </p>
     {% endfor %}
 
-    <a class="sub-link" href="{{ url_for('listHotels', hotels=hotels) }}">Back to Hotels</a>
+    <p>
+        <a class="sub-link" href="{{ url_for('listHotels', hotels=hotels) }}">Back to Lodgings</a>
+    </p>
 
 </section>
 {% endblock %}
