--- a/templates/public_list_hotels_by_category.html
+++ b/templates/public_list_hotels_by_category.html
@@ -11,12 +11,12 @@
     <h1 class="page-title heading">{{ category }}</h1>
 
     {% for hotel in hotels %}
-        <h2><a class="hotel-name" href="{{ url_for('showHotel', hotel_id=hotel.id) }}">{{ hotel.name }}</a></h2>
+        <h1><a class="hotel-name" href="{{ url_for('showHotel', hotel_id=hotel.id) }}">{{ hotel.name }}</a></h1>
     {% endfor %}
 
     <p><a href="{{ url_for('showLogin') }}"><span class="glyphicon glyphicon-user"></span>Log In</a> to edit.</p>
 
-    <a class="sub-link" href="{{ url_for('listHotels', hotels=hotels) }}">Back to Hotels</a>
+    <a class="sub-link" href="{{ url_for('listHotels', hotels=hotels) }}">Back to Lodgings</a>
 
 </section>
 
