Fix misnamed html files

--- a/templates/delete_hotel.html
+++ b/templates/delete_hotel.html
@@ -14,6 +14,6 @@
     </form>
 </section>
 
-<a class="sub-link" href="{{ url_for('listHotels', hotels=hotels) }}">Cancel</a>
+<a class="sub-link" href="{{ url_for('showHotels', hotels=hotels) }}">Cancel</a>
 
 {% endblock %}
