--- a/templates/new_hotel.html
+++ b/templates/new_hotel.html
@@ -46,7 +46,7 @@
 
         <input class="btn btn-danger" type="submit" value="Add Hotel">
     </form>
-    <a class="sub-link" href="{{ url_for('listHotels', hotels=hotels) }}">Cancel</a>
+    <a class="sub-link" href="{{ url_for('showHotels', hotels=hotels) }}">Cancel</a>
 
 </section>
 
