--- a/templates/new_user.html
+++ b/templates/new_user.html
@@ -25,7 +25,7 @@
         </div>
         <input class="btn btn-danger" type="submit" value="Add Hotel">
     </form>
-    <a class="sub-link" href="{{ url_for('listHotels', hotels=hotels) }}">Cancel</a>
+    <a class="sub-link" href="{{ url_for('showHotels', hotels=hotels) }}">Cancel</a>
 
 </section>
 
