--- a/templates/show_hotels.html
+++ b/templates/show_hotels.html
@@ -42,6 +42,6 @@
     </ul>
 </section>
 
-<a class="sub-link" href="{{ url_for('listHotels', hotels=hotels) }}">Back to Lodgings</a>
+<a class="sub-link" href="{{ url_for('showHotels', hotels=hotels) }}">Back to Lodgings</a>
 
 {% endblock %}
