--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
 {% block head %}
 <!--LOAD PRE-REQUISITES FOR GOOGLE SIGN IN -->
 <html itemscope itemtype="http://schema.org/Article">
-<meta name="Description" content="Login page for Yamagata Hotels; Description: Hotel and lodging showings, Location: Yamagata Yamagata Japan">
+<meta name="Description" content="Login page for Yamagata Hotels; Description: Hotel and lodging listings, Location: Yamagata Yamagata Japan">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://apis.google.com/js/client:platform.js?onload=start" async defer></script>
 <!-- END PRE-REQUISITES FOR GOOGLE SIGN IN -->
