--- a/templates/public_show_hotels_by_category.html
+++ b/templates/public_show_hotels_by_category.html
@@ -16,7 +16,7 @@
 
     <p><a href="{{ url_for('showLogin') }}"><span class="glyphicon glyphicon-user"></span>Log In</a> to edit.</p>
 
-    <a class="sub-link" href="{{ url_for('listHotels', hotels=hotels) }}">Back to Lodgings</a>
+    <a class="sub-link" href="{{ url_for('showHotels', hotels=hotels) }}">Back to Lodgings</a>
 
 </section>
 
