--- a/templates/show_hotels_by_category.html
+++ b/templates/show_hotels_by_category.html
@@ -19,7 +19,7 @@
     {% endfor %}
 
     <p>
-        <a class="sub-link" href="{{ url_for('listHotels', hotels=hotels) }}">Back to Lodgings</a>
+        <a class="sub-link" href="{{ url_for('showHotels', hotels=hotels) }}">Back to Lodgings</a>
     </p>
 
 </section>
