--- a/templates/header.html
+++ b/templates/header.html
@@ -12,10 +12,10 @@
         {% endif %}
         <div class="hdr-nav">
             <nav class="hdr-navbar" id="hdrNavbar">
-                <a class="is-active" href="#">Home</a>
-                <a href="{{ url_for('newHotel') }}">Add A Hotel</a>
-                <a href="#">Page 2</a>
-                <a href="#">Page 3</a>
+                <a class="is-active" href="{{ url_for('showHotels', hotels=hotels) }}">Home</a>
+                <a href="{{ url_for('newHotel') }}">Add A Lodging</a>
+                <a href="{{ url_for('showHotelCategories', categories=categories) }}">Types of Lodgings</a>
+                
                 {% if 'username' not in session %}
                 <a href="{{ url_for('showLogin') }}"><span class="glyphicon glyphicon-user"></span>Log In</a>
                 {% else %}
