--- a/templates/base.html
+++ b/templates/base.html
@@ -25,8 +25,10 @@
         {% endblock %}
 
         <content>
+            <div class="container">
                 {% block body %}
                 {% endblock %}
+            </div>
         </content>
 
         <footer class="ftr">
