--- a/templates/header.html
+++ b/templates/header.html
@@ -4,7 +4,7 @@
 
 <header class="hdr">
     <div role="banner" class="lay-flex-container">
-        <a class="hdr-brand fl" href="#">山形 Lodgings</a>
+        <a class="hdr-brand fl" href="{{ url_for('showHotelCategories') }}">Ya<span class="bf">山</span>agata<br>Lodgings</a>
         {% if 'username' not in session %}
         <a class="hdr-user-link" href="{{ url_for('showLogin') }}"><i class="far fa-user"><span class="hdr-text"> Log In</span></i></a>
         {% else %}
@@ -15,7 +15,7 @@
                 <a class="is-active" href="{{ url_for('showHotels', hotels=hotels) }}">Home</a>
                 <a href="{{ url_for('newHotel') }}">Add A Lodging</a>
                 <a href="{{ url_for('showHotelCategories', categories=categories) }}">Types of Lodgings</a>
-                
+
                 {% if 'username' not in session %}
                 <a href="{{ url_for('showLogin') }}"><span class="glyphicon glyphicon-user"></span>Log In</a>
                 {% else %}
